検索結果一覧レイアウト修正

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,12 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Oi&display=swap');
 
+/*##以下user*/
 .text-color {
   color: #33231d;
 }
 
 .button {
   background-color: #ea4335 !important;
-  border: 3px solid #33231d !important; /* 枠線の太さと色を指定 */
+  border: 2px solid #33231d !important; /* 枠線の太さと色を指定 */
   color: #eeeed3 !important;
   width: 150px;
   transition: background-color 0.3s, color 0.3s;
@@ -29,7 +30,7 @@
 .header-button {
   background-color: #0001dd !important;
   color: #eeeed3 !important; /* 通常時のテキストカラー */
-  border: 3px solid #33231d !important; /* 枠線の太さと色を指定 */
+  border: 2px solid #33231d !important; /* 枠線の太さと色を指定 */
   transition: background-color 0.3s, color 0.3s; /* スムーズな遷移 */
 }
 
@@ -40,7 +41,7 @@
 
 .sign-up-button {
   background-color: #ea4335 !important;
-  border: 3px solid #33231d !important; /* 枠線の太さと色を指定 */
+  border: 2px solid #33231d !important; /* 枠線の太さと色を指定 */
   color: #eeeed3 !important;
   width: 150px;
   transition: background-color 0.3s, color 0.3s;
@@ -48,13 +49,12 @@
 
 .sign-up-button:hover {
   background-color: #ed9f82 !important; /* ホバー時の背景色 */
-  color: #33231d !important; /* ホバー時のテキストカラー */
 }
 
 .top-post-new-button {
   background-color: #ea4335 !important; /* 通常時の背景色 */
   color: #eeeed3 !important; /* 通常時のテキストカラー */
-  border: 4px solid #33231d !important; /* 枠線の太さと色を指定 */
+  border: 3px solid #33231d !important; /* 枠線の太さと色を指定 */
   width: 300px; /* 幅を指定 */
   height: 80px; /* 高さを指定 */
   transition: background-color 0.3s, color 0.3s; /* スムーズな遷移 */
@@ -79,7 +79,7 @@
 
 .post-edit-button {
   background-color: #eeeed3 !important;
-  border: 3px solid #33231d !important; /* 枠線の太さと色を指定 */
+  border: 2px solid #33231d !important; /* 枠線の太さと色を指定 */
   color: #33231d !important;
 }
 
@@ -90,7 +90,7 @@
 
 .post-delete-button {
   background-color: #eeeed3 !important;
-  border: 3px solid #33231d !important;
+  border: 2px solid #33231d !important;
   color: red !important;
 }
 
@@ -101,7 +101,7 @@
 
 .comment-send-button {
   background-color: #ea4335 !important;
-  border: 3px solid #33231d !important; /* 枠線の太さと色を指定 */
+  border: 2px solid #33231d !important; /* 枠線の太さと色を指定 */
   color: #eeeed3 !important;
   width: 80px;
   transition: background-color 0.3s, color 0.3s;
@@ -119,7 +119,7 @@
 
 .to-confirm-button {
   background-color: #33231d !important;
-  border: 3px solid #33231d !important;
+  border: 2px solid #33231d !important;
   color: #eeeed3 !important;
   width: 150px;
   transition: background-color 0.3s, color 0.3s;
@@ -134,7 +134,7 @@
   background-color: #eeeed3 !important;
   color: #33231d !important;
   width: 150px;
-  border: 3px solid #33231d !important;
+  border: 2px solid #33231d !important;
 }
 
 .go-back-button:hover {
@@ -146,14 +146,16 @@
   background-color: red !important;
   color: #eeeed3 !important;
   width: 150px;
-  border: 3px solid #33231d !important;
+  border: 2px solid #33231d !important;
 }
 
 .withdraw-button:hover {
   background-color: #eeeed3 !important;
-  color: red !important;
+  color: #33231d !important;
 }
 
+
+/*##以下admin*/
 
 
 
