--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -6,7 +6,7 @@
   </div>
 <% end %>
 
-<div class="container" style="width: 50%;" >
+<div class="container text-color" style="width: 50%;" >
   <div class="d-flex justify-content-between align-items-center mt-5 mb-5">
     <div style="font-weight: bold; font-size: 30px;">
       <i class="fa-solid fa-map-pin" style="color: #33231d;"></i> <span style="color: #33231d;">みんなの投稿</span>
@@ -22,12 +22,12 @@
       <% else %>
         <%= image_tag 'no_image2.png', class: "card-img-top", style: "width: 100%;" %>
       <% end %>
-      <div class="card-body">
+      <div class="card-body text-color">
         <h5 class="card-title" style="font-weight: bold; font-size: 20px" ><%= post.title %></h5>
         <p>
           <%= link_to admin_user_path(post.user) do %>
             <%= image_tag post.user.get_profile_image(40, 40), class: "rounded-circle" %>
-            <span style="font-weight: bold; margin-right: 5px; color: black;"><%= post.user.name %></span>
+            <span style="font-weight: bold; margin-right: 5px; color: #33231d;"><%= post.user.name %></span>
           <% end %>
           <i class="fa-regular fa-clock"></i> 投稿日：<%= post.created_at.strftime("%Y年%m月%d日") %>
         </p>
@@ -35,7 +35,7 @@
         <p class="card-text">
           <div class="d-flex justify-content-between align-items-center">
             <%= link_to admin_post_path(post.id) do %>
-              <button class="btn btn-dark ml-2">詳細を見る</button>
+              <button class="btn btn-dark button ml-2" style="border-radius: 25px;">詳細を見る</button>
             <% end %>
             <div class="d-flex align-items-center mr-3">
               <i class="fa-regular fa-heart fa-2x"></i>
