--- a/app/views/admin/searches/search.html.erb
+++ b/app/views/admin/searches/search.html.erb
@@ -2,7 +2,7 @@
 
 <% if @range == "ユーザー" %>
   <div class="container" style="width: 30%;">
-    <div class="text-center mt-5 mb-5">
+    <div class="text-center text-color mt-5 mb-5">
       <div style="font-weight: bold; font-size: 30px;">
         <i class="fa-solid fa-magnifying-glass"></i> 「<%= @word %>」の検索結果
       </div>
@@ -15,11 +15,11 @@
             <td style="display: flex; justify-content: space-between; align-items: center;">
               <div style="display: flex; align-items: center;">
                 <%= image_tag user.get_profile_image(70, 70), class: "rounded-circle" %>
-                <span style="font-size: 30px; padding-left: 20px; color: black;"><%= user.name %></span>
+                <span style="font-size: 30px; padding-left: 20px; color: #33231d;"><%= user.name %></span>
               </div>
               <span>
                 <%= link_to admin_user_path(user), class: "text-dark" do %>
-                  <button class="btn btn-outline-secondary">詳細を見る</button>
+                  <button class="btn btn-outline-secondary button" style="border-radius: 25px;">詳細を見る</button>
                 <% end %>
               </span>
             </td>
@@ -34,7 +34,7 @@
   </div>
 <% elsif @range == "投稿" %>
   <div class="container" style="width: 45%;">
-    <div class="text-center mt-5 mb-5">
+    <div class="text-center text-color mt-5 mb-5">
       <div style="font-weight: bold; font-size: 30px;">
         <i class="fa-solid fa-magnifying-glass"></i> 「<%= @word %>」の検索結果
       </div>
@@ -50,14 +50,14 @@
               <% end %>
             </td>
             <td>
-              <div style="font-size: 18px; margin-left: 3px;">
+              <div style="font-size: 18px; margin-left: 3px; color: #33231d;">
                 <%= post.user.name %>
               </div>
               <div style="font-weight: bold; font-size: 20px">
-                <%= link_to post.title, admin_post_path(post.id), style: "color: #343a40;" %>
+                <%= link_to post.title, admin_post_path(post.id), style: "color: #33231d;" %>
               </div>
             </td>
-            <td>
+            <td class="text-color">
               <div style="display: flex; align-items: center; margin-bottom: 5px;">
                 <i class="fa-regular fa-heart mr-1"></i>
                 <span><%= post.likes.count %></span>
