--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,6 +1,6 @@
 <h1>admin/users/show</h1>
 
-<div class="container">
+<div class="container text-color">
 
   <div class="container mt-5">
     <div class="row col-11" style="margin: auto;">
@@ -15,8 +15,8 @@
           <%= @user.bio %>
         </div>
         <div class="text-end mt-4">
-          <%= link_to "退会", admin_user_path, class: "btn btn-outline-danger ml-2",
-          method: :delete, data: { confirm: "本当に退会しますか？" } %>
+          <%= link_to "退会", admin_user_path, class: "btn btn-outline-danger withdraw-button",
+          style: "border-radius: 25px;", method: :delete, data: { confirm: "本当に退会しますか？" } %>
         </div>
       </div>
     </div>
@@ -27,7 +27,7 @@
   </div>
 
   <table class="table col-10" style="margin: auto;">
-    <tbody>
+    <tbody class="text-color">
       <tr style="line-height: 2; vertical-align: middle;">
         <td style="font-size: 15px;"><strong>性別</strong></td>
         <td style="font-size: 20px;">
@@ -74,17 +74,17 @@
   </div>
 
   <table style="width: 70%; margin: auto; margin-top: 20px;" >
-    <tbody>
+    <tbody class="text-color">
       <% @posts.each do |post| %>
       <tr>
         <td>
           <%= link_to admin_user_path(post.user) do %>
           <%= image_tag post.user.get_profile_image(50, 50), class: "rounded-circle" %>
-          <span style="color: #343a40; font-weight: bold; margin-left: 3px;"><%= post.user.name %></span>
+          <span style="color: #33231d; font-weight: bold; margin-left: 3px;"><%= post.user.name %></span>
           <% end %>
         </td>
         <td style="font-weight: bold; font-size: 20px">
-          <%= link_to post.title, admin_post_path(post.id), style: "color: #343a40;" %>
+          <%= link_to post.title, admin_post_path(post.id), style: "color: #33231d;" %>
         </td>
         <td>
           <i class="fa-regular fa-heart mr-1"></i><%= post.likes.count %>
