--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,7 +64,7 @@
               </li>
               <li class="nav-item">
                 <%= link_to destroy_admin_session_path, method: :delete, class: "nav-link text-dark text-right" do %>
-                  <button class="btn btn-outline-dark header-buttonn" style="border-radius: 25px;">ログアウト</button>
+                  <button class="btn btn-outline-dark header-button" style="border-radius: 25px;">ログアウト</button>
                 <% end %>
               </li>
             <% else %>
