--- a/app/views/user/users/confirm.html.erb
+++ b/app/views/user/users/confirm.html.erb
@@ -25,7 +25,7 @@
           <%= link_to "戻る", edit_mypage_path,
           class: "btn btn-outline-secondary go-back-button mr-2", style: "border-radius: 25px;" %>
           <%= link_to "退会する", user_path(0),
-          class: "btn btn-danger withdraw-button ml-2", style: "border-radius: 25px;",
+          class: "btn btn-danger button ml-2", style: "border-radius: 25px;",
           method: :delete, data: { confirm: "本当に退会しますか？" } %>
         </div>
       </td>
