--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -4,6 +4,12 @@
   </div>
 <% end %>
 
+<% if flash[:withdraw_success] %>
+  <div class="alert success-flash mt-4 text-center w-25 mx-auto">
+    <%= flash[:withdraw_success] %>
+  </div>
+<% end %>
+
 <div class="container" style="width: 50%;" >
   <div class="d-flex justify-content-between align-items-center mt-5 mb-5">
     <div style="font-weight: bold; font-size: 30px;">
