--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,5 +1,3 @@
-<h1>admin/top</h1>
-
 <% if flash[:post_destroy_success] %>
   <div class="alert success-flash mt-4 text-center w-25 mx-auto">
     <%= flash[:post_destroy_success] %>
@@ -41,10 +39,10 @@
         <p class="card-text">
           <div class="d-flex justify-content-between align-items-center">
             <%= link_to admin_post_path(post.id) do %>
-              <button class="btn btn-dark button ml-2" style="border-radius: 25px;">詳細を見る</button>
+              <button class="btn btn-dark button" style="border-radius: 25px;">詳細を見る</button>
             <% end %>
             <div class="d-flex align-items-center mr-3">
-              <i class="fa-regular fa-heart fa-2x"></i>
+              <i class="fa-regular fa-heart mr-2 fa-2x"></i>
               <span style="font-size: 24px;"><%= post.likes.count %></span>
               <i class="fa-regular fa-comment-dots fa-2x ml-4 mr-2"></i>
               <span style="font-size: 24px;"><%= post.post_comments.count %></span>
