--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -7,16 +7,26 @@
       </div>
       <div class="col-12 col-md-8">
         <div style="font-weight: bold; font-size: 50px;">
-          <%= @user.name %>
+          <div class=><%= @user.name %></div>
         </div>
         <div style="font-size: 20px;">
           <%= @user.bio %>
         </div>
         <div class="text-end mt-4">
-          <%= link_to edit_mypage_path, class: "text-dark" do %>
-            <button class="btn btn-outline-dark post-edit-button" style="border-radius: 25px;">フォローする <i class="fa-solid fa-user-plus"></i></button>
+          <% if current_user.following?(@user) %>
+            <%= link_to user_relationships_path(@user.id), method: :delete do%>
+              <button class="btn following-button" style="border-radius: 25px;">
+              フォロー中 <i class="fa-solid fa-user-group"></i></i></button>
+            <% end %>
+          <% else %>
+            <%= link_to user_relationships_path(@user.id), method: :post do%>
+              <button class="btn follow-button" style="border-radius: 25px;">
+              フォローする <i class="fa-solid fa-user-plus"></i></button>
+            <% end %>
           <% end %>
           <span style="margin: 0 6px;">&nbsp;</span>
+          フォロー中 <%= @user.followings.count %>人
+          フォロワー <%= @user.followers.count %>人
           <%= link_to chats_path, class: "text-dark" do %>
             <button class="btn btn-outline-dark post-edit-button" style="border-radius: 25px;">チャット <i class="fa-solid fa-comment-dots"></i></button>
           <% end %>
