--- a/app/views/user/users/mypage.html.erb
+++ b/app/views/user/users/mypage.html.erb
@@ -5,51 +5,91 @@
 <% end %>
 
 <div class="container text-color">
-  <!--<div class="mt-5" style="text-align: right; margin-right: 40px;">-->
-  <!--  <%= link_to new_post_path, class: "text-dark" do %>-->
-  <!--    <button class="btn btn-dark btn-lg mypage-post-new-button" style="border-radius: 50px;">投稿を作成する <i class="fa-solid fa-pen"></i></button>-->
-  <!--  <% end %>-->
-  <!--</div>-->
+  <table style="margin: auto; border: none;">
+    <tr>
+      <td colspan="3" style="text-align: center; vertical-align: middle;">
+        <%= image_tag @user.get_profile_image(150, 150), class: "rounded-circle" %>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="3" style="text-align: center; vertical-align: middle; font-weight: bold; font-size: 50px;">
+        <%= @user.name %>
+      </td>
+    </tr>
+    <tr>
+      <td  colspan="3" style="text-align: center; vertical-align: middle;">
+        フォロー中: <%= @user.followings.count %>人
+        フォロワー: <%= @user.followers.count %>人
+      </td>
+    </tr>
+    <tr>
+      <td colspan="3" style="height: 10px;"></td>
+    </tr>
+    <tr>
+      <td>
+        <%= link_to edit_mypage_path, class: "text-dark" do %>
+          <button class="btn btn-outline-dark post-edit-button mr-3" style="border-radius: 25px;">
+          プロフィールを編集 <i class="fa-solid fa-pen"></i></button>
+        <% end %>
+      </td>
+      <td>
+        <%= link_to chats_path, class: "text-dark" do %>
+          <button class="btn btn-outline-dark post-edit-button mr-3" style="border-radius: 25px;">
+          チャット <i class="fa-solid fa-comment-dots"></i></button>
+        <% end %>
+      </td>
+      <td>
+        <%= link_to new_post_path, class: "text-dark" do %>
+          <button class="btn btn-outline-dark post-edit-button" style="border-radius: 25px;">
+          いいね <i class="fa-solid fa-heart"></i></button>
+        <% end %>
+      </td>
+    </tr>
+  </table>
+</div>
 
-  <div class="container" style="margin-top: 70px;">
-    <div class="row col-11" style="margin: auto;">
-      <div class="col-12 col-md-3 mb-3 mb-md-0">
-        <%= image_tag @user.get_profile_image(200, 200), class: "rounded-circle" %>
-      </div>
-      <div class="col-12 col-md-8">
-        <div style="font-weight: bold; font-size: 50px;" class="d-flex justify-content-between align-items-center">
-          <%= @user.name %>
-        </div>
-        <div style="font-size: 20px;">
-          <%= @user.bio %>
-        </div>
-        <div class="text-end mt-4">
-          <%= link_to edit_mypage_path, class: "text-dark" do %>
-            <button class="btn btn-outline-dark post-edit-button" style="border-radius: 25px;">
-            プロフィールを編集 <i class="fa-solid fa-pen"></i></button>
-          <% end %>
-          <span style="margin: 0 6px;">&nbsp;</span>
-          <%= link_to chats_path, class: "text-dark" do %>
-            <button class="btn btn-outline-dark post-edit-button" style="border-radius: 25px;">
-            チャット <i class="fa-solid fa-comment-dots"></i></button>
-          <% end %>
-          <span style="margin: 0 6px;">&nbsp;</span>
+
+
+<!--<div class="container text-color">-->
+<!--  <div class="container" style="margin-top: 70px;">-->
+<!--    <div class="row col-11" style="margin: auto;">-->
+<!--      <div class="col-12 col-md-3 mb-3 mb-md-0">-->
+<!--        <%= image_tag @user.get_profile_image(200, 200), class: "rounded-circle" %>-->
+<!--      </div>-->
+<!--      <div class="col-12 col-md-8">-->
+<!--        <div style="font-weight: bold; font-size: 50px;" class="d-flex justify-content-between align-items-center">-->
+<!--          <%= @user.name %>-->
+<!--        </div>-->
+<!--        <div style="font-size: 20px;">-->
+<!--          <%= @user.bio %>-->
+<!--        </div>-->
+<!--        <div class="text-end mt-4">-->
+<!--          <%= link_to edit_mypage_path, class: "text-dark" do %>-->
+<!--            <button class="btn btn-outline-dark post-edit-button" style="border-radius: 25px;">-->
+<!--            プロフィールを編集 <i class="fa-solid fa-pen"></i></button>-->
+<!--          <% end %>-->
+<!--          <span style="margin: 0 6px;">&nbsp;</span>-->
+<!--          <%= link_to chats_path, class: "text-dark" do %>-->
+<!--            <button class="btn btn-outline-dark post-edit-button" style="border-radius: 25px;">-->
+<!--            チャット <i class="fa-solid fa-comment-dots"></i></button>-->
+<!--          <% end %>-->
+<!--          <span style="margin: 0 6px;">&nbsp;</span>-->
           <!--いいねした投稿一覧のurlが作成できてないため暫定的に新規登録画面のurl貼り付けてます-->
-          <%= link_to new_post_path, class: "text-dark" do %>
-            <button class="btn btn-outline-dark post-edit-button" style="border-radius: 25px;">
-            いいね <i class="fa-solid fa-heart"></i></button>
-          <% end %>
-        </div>
-      </div>
-    </div>
-  </div>
+<!--          <%= link_to new_post_path, class: "text-dark" do %>-->
+<!--            <button class="btn btn-outline-dark post-edit-button" style="border-radius: 25px;">-->
+<!--            いいね <i class="fa-solid fa-heart"></i></button>-->
+<!--          <% end %>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
 
   <div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;"
        class="text-center">
     【プロフィール】
   </div>
 
-  <table class="table col-10" style="margin: auto;">
+  <table class="table" style="margin: auto; width: 50%; max-width: 800px;">
     <tbody class="text-color">
       <tr style="line-height: 2; vertical-align: middle;">
         <td style="font-size: 15px;"><strong>性別</strong></td>
@@ -96,7 +136,7 @@
     【投稿一覧】
   </div>
 
-  <table style="width: 75%; margin: auto; margin-top: 20px;" >
+  <table style="width: 60%; margin: auto; margin-top: 20px;" >
     <tbody class="text-color">
       <% @posts.each do |post| %>
       <tr>
