--- a/app/views/user/users/mypage.html.erb
+++ b/app/views/user/users/mypage.html.erb
@@ -48,118 +48,85 @@
   </table>
 </div>
 
+<div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;"
+     class="text-center text-color">
+  【プロフィール】
+</div>
 
+<table class="table" style="margin: auto; width: 50%; max-width: 800px;">
+  <tbody class="text-color">
+    <tr style="line-height: 2; vertical-align: middle;">
+      <td style="font-size: 15px;"><strong>性別</strong></td>
+      <td style="font-size: 20px;">
+        <%= @user.gender_japanese %>
+      </td>
+      <td style="font-size: 15px;"><strong>年齢</strong></td>
+      <td style="font-size: 20px;">
+        <%= @user.age_japanese %>
+      </td>
+    </tr>
+    <tr style="line-height: 2; vertical-align: middle;">
+      <td style="font-size: 15px;"><strong>喫煙</strong></td>
+      <td style="font-size: 20px;">
+        <%= @user.smoking_japanese %>
+      </td>
+      <td style="font-size: 15px;"><strong>飲酒</strong></td>
+      <td style="font-size: 20px;">
+        <%= @user.drinking_japanese %>
+      </td>
+    </tr>
+    <tr style="line-height: 2; vertical-align: middle;">
+      <td style="font-size: 15px;"><strong>行った国数</strong></td>
+      <td style="font-size: 20px;">
+        <%= @user.country_count.present? ? @user.country_count : '非公開' %>
+      </td>
+      <td style="font-size: 15px;"><strong>好きな地域</strong></td>
+      <td style="font-size: 20px;">
+        <%= @user.favorite_area_japanese %>
+      </td>
+    </tr>
+    <tr style="line-height: 2; vertical-align: middle;">
+      <td style="font-size: 15px;"><strong>予算</strong></td>
+      <td style="font-size: 20px;">
+        <%= @user.budget_japanese %>
+      </td>
+      <td></td>
+      <td></td>
+    </tr>
+  </tbody>
+</table>
 
-<!--<div class="container text-color">-->
-<!--  <div class="container" style="margin-top: 70px;">-->
-<!--    <div class="row col-11" style="margin: auto;">-->
-<!--      <div class="col-12 col-md-3 mb-3 mb-md-0">-->
-<!--        <%= image_tag @user.get_profile_image(200, 200), class: "rounded-circle" %>-->
-<!--      </div>-->
-<!--      <div class="col-12 col-md-8">-->
-<!--        <div style="font-weight: bold; font-size: 50px;" class="d-flex justify-content-between align-items-center">-->
-<!--          <%= @user.name %>-->
-<!--        </div>-->
-<!--        <div style="font-size: 20px;">-->
-<!--          <%= @user.bio %>-->
-<!--        </div>-->
-<!--        <div class="text-end mt-4">-->
-<!--          <%= link_to edit_mypage_path, class: "text-dark" do %>-->
-<!--            <button class="btn btn-outline-dark post-edit-button" style="border-radius: 25px;">-->
-<!--            プロフィールを編集 <i class="fa-solid fa-pen"></i></button>-->
-<!--          <% end %>-->
-<!--          <span style="margin: 0 6px;">&nbsp;</span>-->
-<!--          <%= link_to chats_path, class: "text-dark" do %>-->
-<!--            <button class="btn btn-outline-dark post-edit-button" style="border-radius: 25px;">-->
-<!--            チャット <i class="fa-solid fa-comment-dots"></i></button>-->
-<!--          <% end %>-->
-<!--          <span style="margin: 0 6px;">&nbsp;</span>-->
-          <!--いいねした投稿一覧のurlが作成できてないため暫定的に新規登録画面のurl貼り付けてます-->
-<!--          <%= link_to new_post_path, class: "text-dark" do %>-->
-<!--            <button class="btn btn-outline-dark post-edit-button" style="border-radius: 25px;">-->
-<!--            いいね <i class="fa-solid fa-heart"></i></button>-->
-<!--          <% end %>-->
-<!--        </div>-->
-<!--      </div>-->
-<!--    </div>-->
-<!--  </div>-->
+<div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;"
+     class="text-center text-color">
+  【投稿一覧】
+</div>
 
-  <div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;"
-       class="text-center">
-    【プロフィール】
-  </div>
-
-  <table class="table" style="margin: auto; width: 50%; max-width: 800px;">
-    <tbody class="text-color">
-      <tr style="line-height: 2; vertical-align: middle;">
-        <td style="font-size: 15px;"><strong>性別</strong></td>
-        <td style="font-size: 20px;">
-          <%= @user.gender_japanese %>
-        </td>
-        <td style="font-size: 15px;"><strong>年齢</strong></td>
-        <td style="font-size: 20px;">
-          <%= @user.age_japanese %>
-        </td>
-      </tr>
-      <tr style="line-height: 2; vertical-align: middle;">
-        <td style="font-size: 15px;"><strong>喫煙</strong></td>
-        <td style="font-size: 20px;">
-          <%= @user.smoking_japanese %>
-        </td>
-        <td style="font-size: 15px;"><strong>飲酒</strong></td>
-        <td style="font-size: 20px;">
-          <%= @user.drinking_japanese %>
-        </td>
-      </tr>
-      <tr style="line-height: 2; vertical-align: middle;">
-        <td style="font-size: 15px;"><strong>行った国数</strong></td>
-        <td style="font-size: 20px;">
-          <%= @user.country_count.present? ? @user.country_count : '非公開' %>
-        </td>
-        <td style="font-size: 15px;"><strong>好きな地域</strong></td>
-        <td style="font-size: 20px;">
-          <%= @user.favorite_area_japanese %>
-        </td>
-      </tr>
-      <tr style="line-height: 2; vertical-align: middle;">
-        <td style="font-size: 15px;"><strong>予算</strong></td>
-        <td style="font-size: 20px;">
-          <%= @user.budget_japanese %>
-        </td>
-        <td></td>
-        <td></td>
-      </tr>
-    </tbody>
-  </table>
-
-  <div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;" class="text-center">
-    【投稿一覧】
-  </div>
-
-  <table style="width: 60%; margin: auto; margin-top: 20px;" >
-    <tbody class="text-color">
-      <% @posts.each do |post| %>
-      <tr>
-        <td>
-          <%= link_to(post.user) do %>
-          <%= image_tag post.user.get_profile_image(50, 50), class: "rounded-circle" %>
-          <span style="font-weight: bold; margin-left: 3px; color: #33231d;"><%= post.user.name %></span>
-          <% end %>
-        </td>
-        <td style="font-weight: bold; font-size: 20px">
+<table style="width: 60%; margin: auto; margin-top: 20px;" >
+  <tbody class="text-color">
+    <% @posts.each do |post| %>
+    <tr>
+      <td>
+        <%= link_to(post.user) do %>
+        <%= image_tag post.user.get_profile_image(50, 50), class: "rounded-circle" %>
+        <span style="font-weight: bold; margin-left: 3px; color: #33231d;"></span>
+        <% end %>
+      </td>
+      <td>
+        <div><%= post.user.name %></div>
+        <div style="font-weight: bold; font-size: 20px">
           <%= link_to post.title, post_path(post.id), style: "color: #33231d;" %>
-        </td>
-        <td>
-          <i class="fa-regular fa-heart mr-1"></i><%= post.likes.count %>
-          <i class="fa-regular fa-comment-dots mr-1"></i><%= post.post_comments.count %>
-        </td>
-      </tr>
-      <tr><td colspan="2" style="height: 10px;"></td></tr>
-      <% end %>
-    </tbody>
-  </table>
+        </div>
+      </td>
+      <td>
+        <div><i class="fa-regular fa-heart mr-1"></i><%= post.likes.count %></div>
+        <div><i class="fa-regular fa-comment-dots mr-1"></i><%= post.post_comments.count %></div>
+      </td>
+    </tr>
+    <tr><td colspan="2" style="height: 10px;"></td></tr>
+    <% end %>
+  </tbody>
+</table>
 
-  <div class="pagination d-flex justify-content-center mt-4 mb-5">
-    <%= paginate @posts %>
-  </div>
+<div class="pagination d-flex justify-content-center mt-4 mb-5">
+  <%= paginate @posts %>
 </div>
