--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -1,120 +1,130 @@
-<div class="container">
-
-  <div class="container text-color mt-5">
-    <div class="row col-11" style="margin: auto;">
-      <div class="col-12 col-md-3 mb-3 mb-md-0">
-        <%= image_tag @user.get_profile_image(200, 200), class: "rounded-circle" %>-
-      </div>
-      <div class="col-12 col-md-8">
-        <div style="font-weight: bold; font-size: 50px;">
-          <div class=><%= @user.name %></div>
-        </div>
-        <div style="font-size: 20px;">
-          <%= @user.bio %>
-        </div>
-        <div class="text-end mt-4">
-          <% if current_user.following?(@user) %>
-            <%= link_to user_relationships_path(@user.id), method: :delete do%>
-              <button class="btn following-button" style="border-radius: 25px;">
-              フォロー中 <i class="fa-solid fa-user-group"></i></i></button>
-            <% end %>
-          <% else %>
-            <%= link_to user_relationships_path(@user.id), method: :post do%>
-              <button class="btn follow-button" style="border-radius: 25px;">
-              フォローする <i class="fa-solid fa-user-plus"></i></button>
-            <% end %>
+<div class="container text-color">
+  <table style="margin: auto; border: none;">
+    <tr>
+      <td colspan="3" style="text-align: center; vertical-align: middle;">
+        <%= image_tag @user.get_profile_image(150, 150), class: "rounded-circle" %>
+      </td>
+    </tr>
+    <tr>
+      <td colspan="3" style="text-align: center; vertical-align: middle; font-weight: bold; font-size: 50px;">
+        <%= @user.name %>
+      </td>
+    </tr>
+    <tr>
+      <td  colspan="3" style="text-align: center; vertical-align: middle;">
+        フォロー中: <%= @user.followings.count %>人
+        フォロワー: <%= @user.followers.count %>人
+      </td>
+    </tr>
+    <tr>
+      <td colspan="3" style="height: 10px;"></td>
+    </tr>
+    <tr>
+      <td>
+        <% if current_user.following?(@user) %>
+          <%= link_to user_relationships_path(@user.id), method: :delete do%>
+            <button class="btn following-button mr-3" style="border-radius: 25px;">
+            フォロー中 <i class="fa-solid fa-user-group"></i></i></button>
           <% end %>
-          <span style="margin: 0 6px;">&nbsp;</span>
-          フォロー中 <%= @user.followings.count %>人
-          フォロワー <%= @user.followers.count %>人
-          <%= link_to chats_path, class: "text-dark" do %>
-            <button class="btn btn-outline-dark post-edit-button" style="border-radius: 25px;">チャット <i class="fa-solid fa-comment-dots"></i></button>
+        <% else %>
+          <%= link_to user_relationships_path(@user.id), method: :post do%>
+            <button class="btn follow-button mr-3" style="border-radius: 25px;">
+            フォローする <i class="fa-solid fa-user-plus"></i></button>
           <% end %>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;"
-       class="text-center text-color">
-    【プロフィール】
-  </div>
-
-  <table class="table col-10" style="margin: auto;">
-    <tbody class="text-color">
-      <tr style="line-height: 2; vertical-align: middle;">
-        <td style="font-size: 15px;"><strong>性別</strong></td>
-        <td style="font-size: 20px;">
-          <%= @user.gender_japanese %>
-        </td>
-        <td style="font-size: 15px;"><strong>年齢</strong></td>
-        <td style="font-size: 20px;">
-          <%= @user.age_japanese %>
-        </td>
-      </tr>
-      <tr style="line-height: 2; vertical-align: middle;">
-        <td style="font-size: 15px;"><strong>喫煙</strong></td>
-        <td style="font-size: 20px;">
-          <%= @user.smoking_japanese %>
-        </td>
-        <td style="font-size: 15px;"><strong>飲酒</strong></td>
-        <td style="font-size: 20px;">
-          <%= @user.drinking_japanese %>
-        </td>
-      </tr>
-      <tr style="line-height: 2; vertical-align: middle;">
-        <td style="font-size: 15px;"><strong>行った国数</strong></td>
-        <td style="font-size: 20px;">
-          <%= @user.country_count.present? ? @user.country_count : '非公開' %>
-        </td>
-        <td style="font-size: 15px;"><strong>好きな地域</strong></td>
-        <td style="font-size: 20px;">
-          <%= @user.favorite_area_japanese %>
-        </td>
-      </tr>
-      <tr style="line-height: 2; vertical-align: middle;">
-        <td style="font-size: 15px;"><strong>予算</strong></td>
-        <td style="font-size: 20px;">
-          <%= @user.budget_japanese %>
-        </td>
-        <td></td>
-        <td></td>
-      </tr>
-    </tbody>
+        <% end %>
+      </td>
+      <td>
+        <%= link_to chats_path, class: "text-dark" do %>
+          <button class="btn btn-outline-dark post-edit-button mr-3" style="border-radius: 25px;">
+          チャット <i class="fa-solid fa-comment-dots"></i></button>
+        <% end %>
+      </td>
+    </tr>
   </table>
-
-  <div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;"
-       class="text-center text-color">
-    【投稿一覧】
-  </div>
-
-  <table style="width: 70%; margin: auto; margin-top: 20px;" >
-    <tbody class="text-color">
-      <% @posts.each do |post| %>
-      <tr>
-        <td>
-          <%= link_to(post.user) do %>
-          <%= image_tag post.user.get_profile_image(50, 50), class: "rounded-circle" %>
-          <span style="color: #343a40; font-weight: bold; margin-left: 3px;"><%= post.user.name %></span>
-          <% end %>
-        </td>
-        <td style="font-weight: bold; font-size: 20px">
-          <%= link_to post.title, post_path(post.id), style: "color: #343a40;" %>
-        </td>
-        <td>
-          <i class="fa-regular fa-heart mr-1"></i><%= post.likes.count %>
-          <i class="fa-regular fa-comment-dots mr-1"></i><%= post.post_comments.count %>
-        </td>
-      </tr>
-      <tr><td colspan="2" style="height: 10px;"></td></tr>
-      <% end %>
-    </tbody>
-  </table>
-
-  <div class="pagination d-flex justify-content-center mt-4 mb-5">
-    <%= paginate @posts %>
-  </div>
 </div>
+
+<div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;"
+     class="text-center text-color">
+  【プロフィール】
+</div>
+
+<table class="table" style="margin: auto; width: 50%; max-width: 800px;">
+  <tbody class="text-color">
+    <tr style="line-height: 2; vertical-align: middle;">
+      <td style="font-size: 15px;"><strong>性別</strong></td>
+      <td style="font-size: 20px;">
+        <%= @user.gender_japanese %>
+      </td>
+      <td style="font-size: 15px;"><strong>年齢</strong></td>
+      <td style="font-size: 20px;">
+        <%= @user.age_japanese %>
+      </td>
+    </tr>
+    <tr style="line-height: 2; vertical-align: middle;">
+      <td style="font-size: 15px;"><strong>喫煙</strong></td>
+      <td style="font-size: 20px;">
+        <%= @user.smoking_japanese %>
+      </td>
+      <td style="font-size: 15px;"><strong>飲酒</strong></td>
+      <td style="font-size: 20px;">
+        <%= @user.drinking_japanese %>
+      </td>
+    </tr>
+    <tr style="line-height: 2; vertical-align: middle;">
+      <td style="font-size: 15px;"><strong>行った国数</strong></td>
+      <td style="font-size: 20px;">
+        <%= @user.country_count.present? ? @user.country_count : '非公開' %>
+      </td>
+      <td style="font-size: 15px;"><strong>好きな地域</strong></td>
+      <td style="font-size: 20px;">
+        <%= @user.favorite_area_japanese %>
+      </td>
+    </tr>
+    <tr style="line-height: 2; vertical-align: middle;">
+      <td style="font-size: 15px;"><strong>予算</strong></td>
+      <td style="font-size: 20px;">
+        <%= @user.budget_japanese %>
+      </td>
+      <td></td>
+      <td></td>
+    </tr>
+  </tbody>
+</table>
+
+<div style="font-weight: bold; font-size: 25px; margin-top: 40px; margin-bottom: 20px;"
+     class="text-center text-color">
+  【投稿一覧】
+</div>
+
+<table style="margin: auto; width: 60%; max-width: 800px;">
+  <tbody class="text-color">
+    <% @posts.each do |post| %>
+    <tr>
+      <td>
+        <%= link_to(post.user) do %>
+          <%= image_tag post.user.get_profile_image(50, 50), class: "rounded-circle" %>
+        <% end %>
+      </td>
+      <td>
+        <div><%= post.user.name %></div>
+        <div style="font-weight: bold; font-size: 20px">
+          <%= link_to post.title, post_path(post.id), style: "color: #33231d;" %>
+        </div>
+      </td>
+      <td>
+        <div><i class="fa-regular fa-heart mr-1"></i><%= post.likes.count %></div>
+        <div><i class="fa-regular fa-comment-dots mr-1"></i><%= post.post_comments.count %></div>
+      </td>
+    </tr>
+    <tr><td colspan="2" style="height: 10px;"></td></tr>
+    <% end %>
+  </tbody>
+</table>
+
+<div class="pagination d-flex justify-content-center mt-4 mb-5">
+  <%= paginate @posts %>
+</div>
+
 
 
 
