user/showフォロー中/フォロワー一覧リンク設定

--- a/app/views/user/users/followers.html.erb
+++ b/app/views/user/users/followers.html.erb
@@ -8,19 +8,21 @@
         <%= image_tag user.get_profile_image(45, 45), class: "rounded-circle" %>
         <span style="margin-left: 10px; color: #33231d; font-weight: bold; font-size: 15px;"><%= user.name %>
       <% end %>
-      <% if current_user.following?(user) %>
-        <%= link_to user_relationships_path(user.id), method: :delete do%>
-          <button class="btn follower-box-following-button"
-                  style="border-radius: 25px; width: 100px; font-size: 12px;">
-                  フォロー中
-          </button>
-        <% end %>
-      <% else %>
-        <%= link_to user_relationships_path(user.id), method: :post do%>
-          <button class="btn follower-box-follow-button"
-                  style="border-radius: 25px; width: 100px; font-size: 12px;">
-                  フォローする
-          </button>
+      <% unless current_user == user %>
+        <% if current_user.following?(user) %>
+          <%= link_to user_relationships_path(user.id), method: :delete do%>
+            <button class="btn follower-box-following-button"
+                    style="border-radius: 25px; width: 100px; font-size: 12px;">
+                    フォロー中
+            </button>
+          <% end %>
+        <% else %>
+          <%= link_to user_relationships_path(user.id), method: :post do%>
+            <button class="btn follower-box-follow-button"
+                    style="border-radius: 25px; width: 100px; font-size: 12px;">
+                    フォローする
+            </button>
+          <% end %>
         <% end %>
       <% end %>
     </div>
