--- a/app/views/user/users/followings.html.erb
+++ b/app/views/user/users/followings.html.erb
@@ -1,1 +1,31 @@
-<h1>フォロー中一覧</h1>
+<div class="followers-box shadow-lg"
+     style="margin: auto; border-radius: 25px; overflow: hidden; margin-top: 70px; overflow-y: auto;">
+  <p class="text-center" style="font-weight: bold; font-size: 20px;">フォロー中</p>
+
+  <% @users.each do |user| %>
+    <div style="display: flex; align-items: center; justify-content: space-between; margin: 5px 0;">
+      <%= link_to user_path(user) do %>
+        <%= image_tag user.get_profile_image(45, 45), class: "rounded-circle" %>
+        <span style="margin-left: 10px; color: #33231d; font-weight: bold; font-size: 15px;"><%= user.name %>
+      <% end %>
+      <% unless current_user == user %>
+        <% if current_user.following?(user) %>
+          <%= link_to user_relationships_path(user.id), method: :delete do%>
+            <button class="btn follower-box-following-button"
+                    style="border-radius: 25px; width: 100px; font-size: 12px;">
+                    フォロー中
+            </button>
+          <% end %>
+        <% else %>
+          <%= link_to user_relationships_path(user.id), method: :post do%>
+            <button class="btn follower-box-follow-button"
+                    style="border-radius: 25px; width: 100px; font-size: 12px;">
+                    フォローする
+            </button>
+          <% end %>
+        <% end %>
+      <% end %>
+    </div>
+  <% end %>
+</div>
+
