--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -1,41 +1,46 @@
 <div class="container text-color">
   <table style="margin: auto; border: none;">
     <tr>
-      <td colspan="3" style="text-align: center; vertical-align: middle;">
+      <td colspan="3" style="text-align: center;">
         <%= image_tag @user.get_profile_image(150, 150), class: "rounded-circle" %>
       </td>
     </tr>
     <tr>
-      <td colspan="3" style="text-align: center; vertical-align: middle; font-weight: bold; font-size: 50px;">
+      <td colspan="3" style="text-align: center; font-weight: bold; font-size: 50px;">
         <%= @user.name %>
       </td>
     </tr>
     <tr>
-      <td  colspan="3" style="text-align: center; vertical-align: middle;">
-        フォロー中: <%= @user.followings.count %>人
-        フォロワー: <%= @user.followers.count %>人
+      <td colspan="3" style="text-align: center;">
+        <%= link_to user_followings_path(@user) do %>
+          <span class="text-color">フォロー中: <%= @user.followings.count %>人</span>
+        <% end %>
+        <%= link_to user_followers_path(@user) do %>
+          <span class="text-color">フォロワー: <%= @user.followers.count %>人</span>
+        <% end %>
       </td>
+    </tr>
+    <tr>
+      <td colspan="3" class="text-center" style="font-size: 22px;"><%= @user.bio %></td>
     </tr>
     <tr>
       <td colspan="3" style="height: 10px;"></td>
     </tr>
     <tr>
-      <td>
+      <td colspan="3" class="text-center">
         <% if current_user.following?(@user) %>
           <%= link_to user_relationships_path(@user.id), method: :delete do%>
-            <button class="btn following-button mr-3" style="border-radius: 25px;">
-            フォロー中 <i class="fa-solid fa-user-group"></i></i></button>
+            <button class="btn following-button mr-1" style="border-radius: 25px;">
+            フォロー中 <i class="fa-solid fa-user-group"></i></button>
           <% end %>
         <% else %>
           <%= link_to user_relationships_path(@user.id), method: :post do%>
-            <button class="btn follow-button mr-3" style="border-radius: 25px;">
+            <button class="btn follow-button mr-1" style="border-radius: 25px;">
             フォローする <i class="fa-solid fa-user-plus"></i></button>
           <% end %>
         <% end %>
-      </td>
-      <td>
         <%= link_to chats_path, class: "text-dark" do %>
-          <button class="btn btn-outline-dark post-edit-button mr-3" style="border-radius: 25px;">
+          <button class="btn btn-outline-dark post-edit-button ml-1" style="border-radius: 25px;">
           チャット <i class="fa-solid fa-comment-dots"></i></button>
         <% end %>
       </td>
