--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -28,7 +28,7 @@
     </tr>
     <tr>
       <td colspan="3" class="text-center">
-        <% if current_user.following?(@user) %>
+        <% if user_signed_in? && current_user.following?(@user) %>
           <%= link_to user_relationships_path(@user.id), method: :delete do%>
             <button class="btn following-button mr-1" style="border-radius: 25px;">
             フォロー中 <i class="fa-solid fa-user-group"></i></button>
