--- a/app/views/user/users/show.html.erb
+++ b/app/views/user/users/show.html.erb
@@ -119,7 +119,11 @@
         </div>
       </td>
       <td>
-        <div><i class="fa-regular fa-heart mr-1"></i><%= post.likes.count %></div>
+        <% if current_user.likes.exists?(post_id: post.id) %>
+          <i class="fa-solid fa-heart mr-1"></i><%= post.likes.count %>
+        <% else %>
+          <i class="fa-regular fa-heart mr-1"></i><%= post.likes.count %>
+        <% end %>
         <div><i class="fa-regular fa-comment-dots mr-1"></i><%= post.post_comments.count %></div>
       </td>
     </tr>
