--- a/app/views/user/post_comments/destroy.js.erb
+++ b/app/views/user/post_comments/destroy.js.erb
@@ -1,2 +1,3 @@
-<!--$('#comment_counter').html("<%= j(render 'user/post_comments/counter', post: @comment.post) %>");-->
-<!--$('#comment_index').html("<%= j(render 'user/post_comments/index', post: @comment.post) %>");-->
+$('#comment_counter').html("<%= j(render 'user/post_comments/counter', post: @post) %>");
+$('#comment_index').html("<%= j(render 'user/post_comments/index', post: @post) %>");
+
