--- a/app/views/user/posts/show.html.erb
+++ b/app/views/user/posts/show.html.erb
@@ -48,18 +48,13 @@
       </div>
     </div>
 
-    <div id="comment_textarea">
+    <div id="comment_form">
       <%= render "user/post_comments/form", post: @post, post_comment: @post_comment %>
     </div>
 
     <div id="comment_index">
-      <%= render "user/post_comments/index", post: @post %>
+      <%= render "user/post_comments/index", post: @post, post_comment: @post_comment %>
     </div>
-
-
-
-
-
 
   </div>
 </div>
