--- a/app/views/user/users/mypage.html.erb
+++ b/app/views/user/users/mypage.html.erb
@@ -33,15 +33,15 @@
     <tr>
       <td colspan="3" class="text-center">
         <%= link_to edit_mypage_path, class: "text-dark" do %>
-          <button class="btn btn-outline-dark post-edit-button mr-1" style="border-radius: 25px;">
-          プロフィールを編集 <i class="fa-solid fa-pen"></i></button>
+          <button class="btn btn-outline-dark post-edit-button mr-1" style="border-radius: 25px;width: 145px;">
+          編集 <i class="fa-solid fa-pen"></i></button>
         <% end %>
         <!--<!%= link_to chats_path, class: "text-dark" do %>-->
         <!--  <button class="btn btn-outline-dark post-edit-button ml-1 mr-1" style="border-radius: 25px;">-->
         <!--  チャット <i class="fa-solid fa-comment-dots"></i></button>-->
         <!--<!% end %>-->
         <%= link_to likes_user_path(@user), class: "text-dark" do %>
-          <button class="btn btn-outline-dark post-edit-button ml-1" style="border-radius: 25px;">
+          <button class="btn btn-outline-dark post-edit-button ml-1" style="border-radius: 25px; width: 145px;">
           いいね <i class="fa-solid fa-heart"></i></button>
         <% end %>
       </td>
